--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   <script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 </head>
 
-<body onload="start()">
+<body onload="start2()">
   <div class="d-flex flex-column flex-md-row align-items-center p-3 px-md-4 mb-3 bg-white border-bottom shadow-sm">
     <h5 class="my-0 mr-md-auto font-weight-normal">METEO PREDICTION TP3</h5>
   </div>
@@ -44,12 +44,12 @@
           <h4 class="my-0 font-weight-normal">Aujourd'hui</h4>
         </div>
         <div class="card-body">
-          <h2 id="today-forecast-main" class="card-title">
+          <h2 id="day0-forecast-main" class="card-title">
           </h2>
           <div>
-            <p id="today-forecast-more-info"></p>
-            <div id="icon-weather-container"></div>
-            <h3 id="today-forecast-temp"> </h3>
+            <p id="day0-forecast-more-info"></p>
+            <div id="day0-icon-weather-container"></div>
+            <h3 id="day0-forecast-temp"> </h3>
           </div>
           <!-- <button type="button" class="btn btn-lg btn-block btn-primary button-load-forecast" onclick='start()'>
             Quel temps fait-il aujourd'hui ? -->
@@ -65,12 +65,12 @@
             <h4 class="my-0 font-weight-normal">Demain</h4>
           </div>
           <div class="card-body">
-            <h2 id="today-forecast-main" class="card-title">
+            <h2 id="day1-forecast-main" class="card-title">
             </h2>
             <div>
-              <p id="today-forecast-more-info"></p>
-              <div id="icon-weather-container"></div>
-              <h3 id="today-forecast-temp"> </h3>
+              <p id="day1-forecast-more-info"></p>
+              <div id="day1-icon-weather-container"></div>
+              <h3 id="day1-forecast-temp"> </h3>
             </div>
           </div>
         </div>
@@ -79,12 +79,12 @@
             <h4 class="my-0 font-weight-normal">Après demain</h4>
           </div>
           <div class="card-body">
-            <h2 id="today-forecast-main" class="card-title">
+            <h2 id="day2-forecast-main" class="card-title">
             </h2>
             <div>
-              <p id="today-forecast-more-info"></p>
-              <div id="icon-weather-container"></div>
-              <h3 id="today-forecast-temp"> </h3>
+              <p id="day2-forecast-more-info"></p>
+              <div id="day2-icon-weather-container"></div>
+              <h3 id="day2-forecast-temp"> </h3>
             </div>
           </div>
         </div>
@@ -93,12 +93,12 @@
             <h4 class="my-0 font-weight-normal">Encore après demain</h4>
           </div>
           <div class="card-body">
-            <h2 id="today-forecast-main" class="card-title">
+            <h2 id="day3-forecast-main" class="card-title">
             </h2>
             <div>
-              <p id="today-forecast-more-info"></p>
-              <div id="icon-weather-container"></div>
-              <h3 id="today-forecast-temp"> </h3>
+              <p id="day3-forecast-more-info"></p>
+              <div id="day3-icon-weather-container"></div>
+              <h3 id="day3-forecast-temp"> </h3>
             </div>
           </div>
         </div>
